# RWKV-LM

./: .gitignore  README.dev.md  myenv.yml  pyproject.toml
RWKV-v4neo/: prepare_data.py  run.py  train.py
RWKV-v4neo/cuda/: wkv_cuda_bf16.cu
RWKV-v4neo/src/: model.py  model_run.py
